syntax = 'proto3';

package im.actor.server;

import "scalapb/scalapb.proto";

message SerializedUpdate {
    int32 header = 1;
    bytes body = 2;
    repeated int32 user_ids = 3;
    repeated int32 group_ids = 4;
}

message UpdateMapping {
    SerializedUpdate default = 1;
    map<int32, SerializedUpdate> custom = 2;
}

message SeqUpdate {
    int32 user_id = 1;
    int32 seq = 2;
    int64 timestamp = 3;
    UpdateMapping mapping = 4;
}

enum PeerType {
    Unknown = 0;
    Private = 1;
    Group = 2;
}

message Peer {
    option (scalapb.message).extends = "im.actor.server.model.PeerBase";

    PeerType type = 1;
    int32 id = 2;
}

message OutPeer {
    option (scalapb.message).extends = "im.actor.server.model.PeerBase";

    PeerType type = 1;
    int32 id = 2;
    int64 access_hash = 3;
}
